--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.1'
 
 services:
   joomla:
-    image: joomla
+    image: joomla:3.9.0
     restart: always
     links:
       - joomladb:mysql
