--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,9 @@ version: '3.1'
 
 services:
   joomla:
-    image: joomla:3.9.0
+    image: joomla:3.4.3
+    volumes:
+      - "./etc:/var/www/html"
     restart: always
     links:
       - joomladb:mysql
